--- a/module-06/index.html
+++ b/module-06/index.html
@@ -158,9 +158,14 @@
     </main>
 
     <footer class="main-footer container">
-        <p>Text</p>
-        <input type="text" class="input-field">YourEmail
-        <button class="button">Text</button>
+        <div class="footer-content">
+            <p class="footer-text">© 2016 MoGo free PSD template by</p>
+            <a class="footer-link" href="#" alt="MoGo free PSD template">Laaqiq</a>
+        </div>
+        <div class="footer-field">
+            <input type="text" class="input-field" placeholder="Your Email...">
+            <button type="button" class="button">Subscribe</button>
+        </div>
     </footer>
 </body>
 
