The description is ready before verification

--- a/module-06/index.html
+++ b/module-06/index.html
@@ -14,7 +14,7 @@
 
     <header class="main-header container">
         <nav class="main-navigation">
-            <a href="" class="site-logo">
+            <a href="#" class="site-logo">
                 <img class="img-logo" src="./img/logo.png" alt="brand and company name" sizes="">
             </a>
             <ul class="navigation-items">
@@ -62,7 +62,7 @@
             </ul>
         </section>
 
-        <section class="team-section">
+        <section class="team-section container">
             <span class="title-slogan">We work with</span>
             <h2 class="section-title">Meet our team</h2>
             <p class="text-item text-item-team">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
