--- a/module-06/index.html
+++ b/module-06/index.html
@@ -15,14 +15,14 @@
     <header class="main-header container">
         <nav class="main-navigation">
             <a href="#" class="site-logo">
-                <img class="img-logo" src="./img/logo.png" alt="brand and company name" sizes="">
+                <img class="img-logo" src="./img/logo.png" alt="brand and company name">
             </a>
             <ul class="navigation-items">
-                <li class="navigation-item"><a class="nav-link" href="http://">About</a></li>
-                <li class="navigation-item"><a class="nav-link" href="http://">Service</a></li>
-                <li class="navigation-item"><a class="nav-link" href="http://">Work</a></li>
-                <li class="navigation-item"><a class="nav-link" href="http://">Blog</a></li>
-                <li class="navigation-item"><a class="nav-link" href="http://">Contact</a></li>
+                <li class="navigation-item"><a class="nav-link" href="#">About</a></li>
+                <li class="navigation-item"><a class="nav-link" href="#">Service</a></li>
+                <li class="navigation-item"><a class="nav-link" href="#">Work</a></li>
+                <li class="navigation-item"><a class="nav-link" href="#">Blog</a></li>
+                <li class="navigation-item"><a class="nav-link" href="#">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -160,7 +160,7 @@
     <footer class="main-footer container">
         <div class="footer-content">
             <p class="footer-text">© 2016 MoGo free PSD template by</p>
-            <a class="footer-link" href="#" alt="MoGo free PSD template">Laaqiq</a>
+            <a class="footer-link" href="#">Laaqiq</a>
         </div>
         <div class="footer-field">
             <input type="text" class="input-field" placeholder="Your Email...">
