In the process of correction after validation

--- a/module-06/index.html
+++ b/module-06/index.html
@@ -69,8 +69,8 @@
                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
                 ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
             <ul class="team-items">
-                <li class="team-item team-item-graphic">
-                    <div class="cart">
+                <li class="team-item team-item-background">
+                    <div class="cart-item cart-item-graphic">
                         <ul class="icon-socials">
                             <li class="team-link">
                                 <a class="icon-link icon-facebook" href="#">
@@ -94,11 +94,11 @@
                             </li>
                         </ul>
                     </div>
-                    <p class="team-item-name">Matthew Dix</p>
+                    <h5 class="team-item-name">Matthew Dix</h5>
                     <p class="team-item-occupation">Graphic Design</p>
                 </li>
                 <li class="team-item team-item-branding">
-                    <div class="cart">
+                    <div class="cart-item cart-item-branding">
                         <ul class="icon-socials">
                             <li class="team-link">
                                 <a class="icon-link icon-facebook" href="#">
@@ -125,8 +125,8 @@
                     <p class="team-item-name">Christopher Campbell</p>
                     <p class="team-item-occupation">Branding/UX design</p>
                 </li>
-                <li class="team-item team-item-developer">
-                    <div class="cart">
+                <li class="team-item ">
+                    <div class="cart-item cart-item-developer">
                         <ul class="icon-socials">
                             <li class="team-link">
                                 <a class="icon-link icon-facebook" href="#">
@@ -169,4 +169,4 @@
     </footer>
 </body>
 
-</html>
+</html> 
