--- a/module-06/index.html
+++ b/module-06/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <header class="main-header container">
-        <nav class="main-navigation">
+        <nav class="main-navigation ">
             <a href="#" class="site-logo">
                 <img class="img-logo" src="./img/logo.png" alt="brand and company name">
             </a>
@@ -31,8 +31,15 @@
         <h1 class="main-title visually-hidden">Title</h1>
 
         <section class="services-section">
-            <span class="title-slogan">We work with</span>
-            <h2 class="section-title">Amazing Services</h2>
+
+            <div class="wrapper-title wrapper-services-title">
+                <span class="title-slogan">We work with</span>
+                <h2 class="section-title">Amazing Services</h2>
+                <div class="section-title-underline">
+                    <span class="visually-hidden">line</span>
+                </div>
+            </div>
+
             <ul class="servises">
                 <li class="servise-item icon-alarm">
                     <h3 class="title-item">Photography</h3>
@@ -63,11 +70,21 @@
         </section>
 
         <section class="team-section container">
-            <span class="title-slogan">We work with</span>
-            <h2 class="section-title">Meet our team</h2>
-            <p class="text-item text-item-team">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+
+            <div class="wrapper-title wrapper-team-title">
+                <span class="title-slogan">We work with</span>
+                <h2 class="section-title section-title-team">Meet our team</h2>
+                <div class="section-title-underline">
+                    <span class="visually-hidden">line</span>
+                </div>
+            </div>
+            <p class="text-item text-item-team">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                exercitation
+                ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            </p>
+
             <ul class="team-items">
                 <li class="team-item team-item-background">
                     <div class="cart-item cart-item-graphic">
