--- a/module-07/index.html
+++ b/module-07/index.html
@@ -1,15 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>module-07</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="./css/normalize.css">
-<link rel="stylesheet" href="./css/style.css">
+    <link href="./fonts/DroidSerif-Italic.ttf" rel="stylesheet">
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
-    Hello
+
+    <header class="main-header container">
+        <nav class="main-navigation">
+            <a href="#" class="site-logo">
+                <img class="img-logo" src="./img/logo-treehouse.png" alt="brand and company name">
+            </a>
+            <ul class="navigation-items">
+                <li class="navigation-item"><a href="#" class="nav-link">Home</a></li>
+                <li class="navigation-item"><a href="#" class="nav-link">Services</a></li>
+                <li class="navigation-item"><a href="#" class="nav-link">Portfolio</a></li>
+                <li class="navigation-item"><a href="#" class="nav-link">About</a></li>
+                <li class="navigation-item"><a href="#" class="nav-link">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main class="main-content container">
+        <h1 class="main-title visually-hidden">Title</h1>
+
+        <section class="main-section">
+            <h2 class="section-title">Services</h2>
+            <p class="description-section">Proin iaculis purus consequat sem cure.</p>
+            <ul class="section-items">
+                <li class="section-item icon-basket">
+                    <h3 class="title-item">E-Commerce</h3>
+                    <p class="description">Proin iaculis purus consequat sem cure 
+                        digni ssim. Donec porttitora entum suscipit 
+                        aenean rhoncus posuere odio in tincidunt.</p>
+                </li>
+                <li class="section-item icon-laptop">
+                    <h3 class="title-item">Responsive Web</h3>
+                    <p class="description">Proin iaculis purus consequat sem cure 
+                        digni ssim. Donec porttitora entum suscipit 
+                        aenean rhoncus posuere odio in tincidunt.</p>
+                </li>
+                <li class="section-item icon-locked">
+                    <h3 class="title-item">Web Security</h3>
+                    <p class="description">Proin iaculis purus consequat sem cure 
+                        digni ssim. Donec porttitora entum suscipit 
+                        aenean rhoncus posuere odio in tincidunt.</p>
+                </li>
+            </ul>
+        </section>
+
+    </main>
+
+    <footer class="main-footer">
+        <h2 class="footer-title">Title</h2>
+        <p class="description-footer">Text</p>
+        <input type="text">
+        <input type="text">
+        <input type="text">
+        <input type="text">
+        <button type="submit">Send message</button>
+    </footer>
 </body>
+
 </html>
