Added footer without button

--- a/module-07/index.html
+++ b/module-07/index.html
@@ -37,20 +37,20 @@
             <ul class="section-items">
                 <li class="section-item icon-basket">
                     <h3 class="title-item">E-Commerce</h3>
-                    <p class="description">Proin iaculis purus consequat sem cure 
-                        digni ssim. Donec porttitora entum suscipit 
+                    <p class="description">Proin iaculis purus consequat sem cure
+                        digni ssim. Donec porttitora entum suscipit
                         aenean rhoncus posuere odio in tincidunt.</p>
                 </li>
                 <li class="section-item icon-laptop">
                     <h3 class="title-item">Responsive Web</h3>
-                    <p class="description">Proin iaculis purus consequat sem cure 
-                        digni ssim. Donec porttitora entum suscipit 
+                    <p class="description">Proin iaculis purus consequat sem cure
+                        digni ssim. Donec porttitora entum suscipit
                         aenean rhoncus posuere odio in tincidunt.</p>
                 </li>
                 <li class="section-item icon-locked">
                     <h3 class="title-item">Web Security</h3>
-                    <p class="description">Proin iaculis purus consequat sem cure 
-                        digni ssim. Donec porttitora entum suscipit 
+                    <p class="description">Proin iaculis purus consequat sem cure
+                        digni ssim. Donec porttitora entum suscipit
                         aenean rhoncus posuere odio in tincidunt.</p>
                 </li>
             </ul>
@@ -59,13 +59,32 @@
     </main>
 
     <footer class="main-footer">
-        <h2 class="footer-title">Title</h2>
-        <p class="description-footer">Text</p>
-        <input type="text">
-        <input type="text">
-        <input type="text">
-        <input type="text">
-        <button type="submit">Send message</button>
+
+        <section class="footer-section container">
+            <h2 class="footer-title">Contact us</h2>
+            <p class="description-footer">Proin iaculis purus consequat sem cure.</p>
+
+            <form class="profile-form" action="#" method="GET">
+                <div class="fieldset-form">
+                    <ul class="input-items">
+                        <li class="input-item">
+                            <input class="input-field" type="text" name="yourname" placeholder="Your Name *">
+                        </li>
+                        <li class="input-item">
+                            <input class="input-field" type="email" name="youremail" placeholder="Your E-mail *">
+                        </li>
+                        <li class="input-item">
+                            <input class="input-field" type="text" name="subject" placeholder="Subject">
+                        </li>
+                    </ul>
+                    <textarea class="input-area" rows="5" cols="10" name="message"
+                        placeholder="Your message *"></textarea>
+                </div>
+                <button type="submit">Send message</button>
+            </form>
+
+        </section>
+
     </footer>
 </body>
 
