Re - correction with wrapper

--- a/module-06/index.html
+++ b/module-06/index.html
@@ -12,11 +12,11 @@
 
 <body>
 
-    <header class="main-header">
-        <div class="main-header-wrapper container">
+    <header>
+        <div class="container">
             <nav class="main-navigation">
                 <a href="#" class="site-logo">
-                    <img class="img-logo" src="./img/logo.png" alt="brand and company name">
+                    <img src="./img/logo.png" alt="brand and company name">
                 </a>
                 <ul class="navigation-items">
                     <li class="navigation-item"><a class="nav-link" href="#">About</a></li>
@@ -29,11 +29,11 @@
         </div>
     </header>
 
-    <main class="main-content">
-        <div class="main-content-wrapper container">
-            <h1 class="main-title visually-hidden">Title</h1>
+    <main>
+        <div class="container">
+            <h1 class="visually-hidden">Title</h1>
 
-            <section class="services-section">
+            <section>
                 <div class="services-section-wrapper">
 
                     <span class="title-slogan">We work with</span>
@@ -72,7 +72,7 @@
                 </div>
             </section>
 
-            <section class="team-section">
+            <section>
                 <div class="team-sectioon-wrapper container">
 
                     <span class="title-slogan">We work with</span>
@@ -85,27 +85,27 @@
                     </p>
 
                     <ul class="team-items">
-                        <li class="team-item team-item-background">
+                        <li class="team-item">
                             <div class="cart-item cart-item-graphic">
                                 <ul class="icon-socials">
                                     <li class="team-link">
                                         <a class="icon-link icon-facebook" href="#">
-                                            <span class="visually-hidden">Facebook</span>
+                                            <p class="visually-hidden">Facebook</p>
                                         </a>
                                     </li>
                                     <li class="team-link">
                                         <a class="icon-link icon-twitter" href="#">
-                                            <span class="visually-hidden">Twitter</span>
+                                            <p class="visually-hidden">Twitter</p>
                                         </a>
                                     </li>
                                     <li class="team-link">
                                         <a class="icon-link icon-pinterest" href="#">
-                                            <span class="visually-hidden">Pinterest</span>
+                                            <p class="visually-hidden">Pinterest</p>
                                         </a>
                                     </li>
                                     <li class="team-link">
                                         <a class="icon-link icon-instagram" href="#">
-                                            <span class="visually-hidden">Instagram</span>
+                                            <p class="visually-hidden">Instagram</p>
                                         </a>
                                     </li>
                                 </ul>
@@ -113,27 +113,27 @@
                             <h5 class="team-item-name">Matthew Dix</h5>
                             <p class="team-item-occupation">Graphic Design</p>
                         </li>
-                        <li class="team-item team-item-branding">
+                        <li class="team-item">
                             <div class="cart-item cart-item-branding">
                                 <ul class="icon-socials">
                                     <li class="team-link">
                                         <a class="icon-link icon-facebook" href="#">
-                                            <span class="visually-hidden">Facebook</span>
+                                            <p class="visually-hidden">Facebook</p>
                                         </a>
                                     </li>
                                     <li class="team-link">
                                         <a class="icon-link icon-twitter" href="#">
-                                            <span class="visually-hidden">Twitter</span>
+                                            <p class="visually-hidden">Twitter</p>
                                         </a>
                                     </li>
                                     <li class="team-link">
                                         <a class="icon-link icon-pinterest" href="#">
-                                            <span class="visually-hidden">Pinterest</span>
+                                            <p class="visually-hidden">Pinterest</p>
                                         </a>
                                     </li>
                                     <li class="team-link">
                                         <a class="icon-link icon-instagram" href="#">
-                                            <span class="visually-hidden">Instagram</span>
+                                            <p class="visually-hidden">Instagram</p>
                                         </a>
                                     </li>
                                 </ul>
@@ -146,22 +146,22 @@
                                 <ul class="icon-socials">
                                     <li class="team-link">
                                         <a class="icon-link icon-facebook" href="#">
-                                            <span class="visually-hidden">Facebook</span>
+                                            <p class="visually-hidden">Facebook</p>
                                         </a>
                                     </li>
                                     <li class="team-link">
                                         <a class="icon-link icon-twitter" href="#">
-                                            <span class="visually-hidden">Twitter</span>
+                                            <p class="visually-hidden">Twitter</p>
                                         </a>
                                     </li>
                                     <li class="team-link">
                                         <a class="icon-link icon-pinterest" href="#">
-                                            <span class="visually-hidden">Pinterest</span>
+                                            <p class="visually-hidden">Pinterest</p>
                                         </a>
                                     </li>
                                     <li class="team-link">
                                         <a class="icon-link icon-instagram" href="#">
-                                            <span class="visually-hidden">Instagram</span>
+                                            <p class="visually-hidden">Instagram</p>
                                         </a>
                                     </li>
                                 </ul>
@@ -175,14 +175,16 @@
         </div>
     </main>
 
-    <footer class="main-footer">
+    <footer>
         <div class="main-footer-wrapper container">
             <div class="footer-content">
-                <p class="footer-text">© 2016 MoGo free PSD template by</p>
+                <span class="footer-copyright">&copy;</span>
+                <p class="footer-text">2016 MoGo free PSD template by</p>
                 <a class="footer-link" href="#">Laaqiq</a>
             </div>
             <div class="footer-field">
-                <input type="text" class="input-field" placeholder="Your Email...">
+                <input class="input-field" type="email" name="email" placeholder="Your Email..." autocomplete="email"
+                    autofocus>
                 <button type="button" class="button">Subscribe</button>
             </div>
         </div>
