Repeatedly correction with wrapper

--- a/module-07/index.html
+++ b/module-07/index.html
@@ -13,8 +13,8 @@
 
 <body>
 
-    <header class="main-header container">
-        <div class="wrapper">
+    <header class="main-header">
+        <div class="main-header-wrapper container">
             <nav class="main-navigation">
                 <a href="#" class="site-logo">
                     <img class="img-logo" src="./img/logo-treehouse.png" alt="brand and company name">
