--- a/module-06/index.html
+++ b/module-06/index.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <header>
+    <header class="main-header">
         <div class="container">
             <nav class="main-navigation">
                 <a href="#" class="site-logo">
