--- a/module-07/index.html
+++ b/module-07/index.html
@@ -30,34 +30,37 @@
         </div>
     </header>
 
-    <main class="main-content container">
-        <h1 class="main-title visually-hidden">Title</h1>
+    <main class="main-content">
+        <div class="main-content-wrapper container">
+            <h1 class="main-title visually-hidden">Title</h1>
 
-        <section class="main-section">
-            <h2 class="section-title">Services</h2>
-            <p class="description-section">Proin iaculis purus consequat sem cure.</p>
-            <ul class="section-items">
-                <li class="section-item icon-basket">
-                    <h3 class="title-item">E-Commerce</h3>
-                    <p class="description">Proin iaculis purus consequat sem cure
-                        digni ssim. Donec porttitora entum suscipit
-                        aenean rhoncus posuere odio in tincidunt.</p>
-                </li>
-                <li class="section-item icon-laptop">
-                    <h3 class="title-item">Responsive Web</h3>
-                    <p class="description">Proin iaculis purus consequat sem cure
-                        digni ssim. Donec porttitora entum suscipit
-                        aenean rhoncus posuere odio in tincidunt.</p>
-                </li>
-                <li class="section-item icon-locked">
-                    <h3 class="title-item">Web Security</h3>
-                    <p class="description">Proin iaculis purus consequat sem cure
-                        digni ssim. Donec porttitora entum suscipit
-                        aenean rhoncus posuere odio in tincidunt.</p>
-                </li>
-            </ul>
-        </section>
-
+            <section class="main-section">
+                <div class="main-section-wrapper">
+                    <h2 class="section-title">Services</h2>
+                    <p class="description-section">Proin iaculis purus consequat sem cure.</p>
+                    <ul class="section-items">
+                        <li class="section-item icon-basket">
+                            <h3 class="title-item">E-Commerce</h3>
+                            <p class="description">Proin iaculis purus consequat sem cure
+                                digni ssim. Donec porttitora entum suscipit
+                                aenean rhoncus posuere odio in tincidunt.</p>
+                        </li>
+                        <li class="section-item icon-laptop">
+                            <h3 class="title-item">Responsive Web</h3>
+                            <p class="description">Proin iaculis purus consequat sem cure
+                                digni ssim. Donec porttitora entum suscipit
+                                aenean rhoncus posuere odio in tincidunt.</p>
+                        </li>
+                        <li class="section-item icon-locked">
+                            <h3 class="title-item">Web Security</h3>
+                            <p class="description">Proin iaculis purus consequat sem cure
+                                digni ssim. Donec porttitora entum suscipit
+                                aenean rhoncus posuere odio in tincidunt.</p>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+        </div>
     </main>
 
     <footer class="main-footer">
