--- a/module-07/index.html
+++ b/module-07/index.html
@@ -16,7 +16,7 @@
     <header class="main-header">
         <div class="main-header-wrapper container">
             <nav class="main-navigation">
-                <a href="#" class="site-logo">
+                <a href="#">
                     <img class="img-logo" src="./img/logo-treehouse.png" alt="brand and company name">
                 </a>
                 <ul class="navigation-items">
@@ -32,9 +32,9 @@
 
     <main class="main-content">
         <div class="main-content-wrapper container">
-            <h1 class="main-title visually-hidden">Title</h1>
+            <h1 class="visually-hidden">Title</h1>
 
-            <section class="main-section">
+            <section>
                 <div class="main-section-wrapper">
                     <h2 class="section-title">Services</h2>
                     <p class="description-section">Proin iaculis purus consequat sem cure.</p>
@@ -66,7 +66,7 @@
     <footer class="main-footer">
         <div class="main-footer-wrapper container">
 
-            <form class="profile-form" action="#" method="POST">
+            <form action="#" method="GET">
                 <div class="profile-form-wrapper">
 
                     <h2 class="footer-title">Contact us</h2>
@@ -90,7 +90,7 @@
                         <textarea class="input-area" rows="10" cols="30" name="message" placeholder="Your message *"
                             required autocomplete="off"></textarea>
                     </div>
-                    <button type="submit" class="button" value="Submit">Send message</button>
+                    <button type="submit" class="button" value="submit">Send message</button>
                 </div>
             </form>
 
