Correction after validation

--- a/module-07/index.html
+++ b/module-07/index.html
@@ -13,10 +13,10 @@
 
 <body>
 
-    <header class="main-header">
+    <header>
         <div class="main-header-wrapper container">
             <nav class="main-navigation">
-                <a href="#">
+                <a class="site-logo" href="#">
                     <img class="img-logo" src="./img/logo-treehouse.png" alt="brand and company name">
                 </a>
                 <ul class="navigation-items">
@@ -30,12 +30,12 @@
         </div>
     </header>
 
-    <main class="main-content">
+    <main>
         <div class="main-content-wrapper container">
             <h1 class="visually-hidden">Title</h1>
 
-            <section>
-                <div class="main-section-wrapper">
+            <section class="main-section">
+                <div>
                     <h2 class="section-title">Services</h2>
                     <p class="description-section">Proin iaculis purus consequat sem cure.</p>
                     <ul class="section-items">
@@ -66,7 +66,7 @@
     <footer class="main-footer">
         <div class="main-footer-wrapper container">
 
-            <form action="#" method="GET">
+            <form class="profile-form" action="#" method="GET">
                 <div class="profile-form-wrapper">
 
                     <h2 class="footer-title">Contact us</h2>
