Added Logo as text

--- a/module-07/index.html
+++ b/module-07/index.html
@@ -16,9 +16,12 @@
     <header>
         <div class="main-header-wrapper container">
             <nav class="main-navigation">
-                <a class="site-logo" href="#">
-                    <img class="img-logo" src="./img/logo-treehouse.png" alt="brand and company name">
-                </a>
+                <div class="logo-text-wrapper">Golden
+                    <a class="site-logo" href="#">
+                        <img class="img-logo visually-hidden" src="./img/logo-treehouse.png"
+                            alt="brand and company name">
+                    </a>
+                </div>
                 <ul class="navigation-items">
                     <li class="navigation-item"><a href="#" class="nav-link">Home</a></li>
                     <li class="navigation-item"><a href="#" class="nav-link">Services</a></li>
