--- a/module-08/index.html
+++ b/module-08/index.html
@@ -16,11 +16,9 @@
     <header class="main-header">
         <div class="main-header-wrapper container">
             <nav class="main-navigation">
-                <!-- <div class="logo-text-wrapper">URLAUBSGLÜCK -->
                 <a href="#" class="site-logo">
                     <img class="img-logo " src="./img/logo-img.png" alt="brand and company name">
                 </a>
-                <!-- </div> -->
                 <ul class="navigation-items">
                     <li class="navigation-item"><a href="#" class="item-link">Log in</a></li>
                     <li class="navigation-item"><a href="#" class="item-link">Sign up</a></li>
@@ -28,7 +26,7 @@
                 <div class="main-header-content">
                     <h2 class="header-content-title">Share your holiday dreams</h2>
                     <p class="header-content-description">And find the perfect partner to fullfill it</p>
-                    <button class="header-button">Find your holiday partner</button>
+                    <button class="header-button" type="button">Find your holiday partner</button>
                 </div>
             </nav>
         </div>
@@ -36,31 +34,43 @@
     </header>
 
     <main class="main-content">
-        <div class="main-content-wrapper">
-            <h1 class="main-content-title visually-hidden">Text</h1>
+        <div class="main-content-wrapper container">
+            <h1 class="main-content-title visually-hidden">Title</h1>
             <section class="main-section">
                 <div class="main-section-wrapper">
                     <h2 class="section-title">Meet a partner for your best holiday</h2>
                     <ul class="section-items">
                         <li class="section-item">
-                            <img src="" alt="" class="section-item-img">
+                            <div class="item-img-wrapper item-partner-tv">
+                                <img class="item-icon-tv" src="./img/icon-tv.png" alt="icon-tv">
+                            </div>
                             <span class="section-item-title">Bradley Hunter</span>
-                            <p class="section-item-description">Based in Chicago. I love playing tennis and loud music.</p>
+                            <p class="section-item-description">Based in Chicago. I love playing tennis and loud music.
+                            </p>
                         </li>
                         <li class="section-item">
-                            <img src="" alt="" class="section-item-img">
+                            <div class="item-img-wrapper item-partner-chemistry">
+                                <img class="item-icon-chemistry" src="./img/icon-chemistry.png" alt="icon-chemistry">
+                            </div>
                             <span class="section-item-title">Lucas Marsha</span>
-                            <p class="section-item-description">I get my inspiration from nature and objects around me. I have a passion to colours, typography and skateboards.</p>
+                            <p class="section-item-description">I get my inspiration from nature and objects around me.
+                                I have a passion to colours, typography and skateboards.</p>
                         </li>
                         <li class="section-item">
-                            <img src="" alt="" class="section-item-img">
+                            <div class="item-img-wrapper item-partner-cap">
+                                <img class="item-icon-cap" src="./img/icon-cap.png" alt="icon-cap">
+                            </div>
                             <span class="section-item-title">Heather Walker</span>
-                            <p class="section-item-description">I'm a happy person that loves cats and climbing on mountains.</p>
+                            <p class="section-item-description">I'm a happy person that loves cats and climbing on
+                                mountains.</p>
                         </li>
                         <li class="section-item">
-                            <img src="" alt="" class="section-item-img">
+                            <div class="item-img-wrapper item-partner-telegram">
+                                <img class="item-icon-telegram" src="./img/icon-telegram.png" alt="icon-telegram">
+                            </div>
                             <span class="section-item-title">Bradley Hunter</span>
-                            <p class="section-item-description">Based in Chicago. I love playing tennis and loud music.</p>
+                            <p class="section-item-description">Based in Chicago. I love playing tennis and loud music.
+                            </p>
                         </li>
                     </ul>
                 </div>
@@ -69,7 +79,7 @@
     </main>
 
     <footer class="main-footer">
-        <div class="main-footer-wrapper">
+        <div class="main-footer-wrapper container">
             <button class="footer-button">See other partners</button></div>
     </footer>
 
