Code for a tablet device is ready

--- a/module-08/index.html
+++ b/module-08/index.html
@@ -16,13 +16,15 @@
     <header class="main-header">
         <div class="main-header-wrapper container">
             <nav class="main-navigation">
-                <a href="#" class="site-logo">
-                    <img class="img-logo " src="./img/logo-img.png" alt="brand and company name">
-                </a>
-                <ul class="navigation-items">
-                    <li class="navigation-item"><a href="#" class="item-link">Log in</a></li>
-                    <li class="navigation-item"><a href="#" class="item-link">Sign up</a></li>
-                </ul>
+                <div class="main-navigation-wrapper">
+                    <a href="#" class="site-logo">
+                        <img class="img-logo " src="./img/logo-img.png" alt="brand and company name">
+                    </a>
+                    <ul class="navigation-items">
+                        <li class="navigation-item"><a href="#" class="item-link">Log in</a></li>
+                        <li class="navigation-item"><a href="#" class="item-link">Sign up</a></li>
+                    </ul>
+                </div>
                 <div class="main-header-content">
                     <h2 class="header-content-title">Share your holiday dreams</h2>
                     <p class="header-content-description">And find the perfect partner to fullfill it</p>
@@ -40,7 +42,7 @@
                 <div class="main-section-wrapper">
                     <h2 class="section-title">Meet a partner for your best holiday</h2>
                     <ul class="section-items">
-                        <li class="section-item">
+                        <li class="section-item section-item-tv">
                             <div class="item-img-wrapper item-partner-tv">
                                 <img class="item-icon-tv" src="./img/icon-tv.png" alt="icon-tv">
                             </div>
@@ -48,7 +50,7 @@
                             <p class="section-item-description">Based in Chicago. I love playing tennis and loud music.
                             </p>
                         </li>
-                        <li class="section-item">
+                        <li class="section-item section-item-chemistry">
                             <div class="item-img-wrapper item-partner-chemistry">
                                 <img class="item-icon-chemistry" src="./img/icon-chemistry.png" alt="icon-chemistry">
                             </div>
@@ -56,15 +58,15 @@
                             <p class="section-item-description">I get my inspiration from nature and objects around me.
                                 I have a passion to colours, typography and skateboards.</p>
                         </li>
-                        <li class="section-item">
+                        <li class="section-item section-item-cap">
                             <div class="item-img-wrapper item-partner-cap">
-                                <img class="item-icon-cap" src="./img/icon-cap.png" alt="icon-cap">
+                                <img class="item-icon-" src="./img/icon-cap.png" alt="icon-cap">
                             </div>
                             <span class="section-item-title">Heather Walker</span>
                             <p class="section-item-description">I'm a happy person that loves cats and climbing on
                                 mountains.</p>
                         </li>
-                        <li class="section-item">
+                        <li class="section-item section-item-telegram">
                             <div class="item-img-wrapper item-partner-telegram">
                                 <img class="item-icon-telegram" src="./img/icon-telegram.png" alt="icon-telegram">
                             </div>
