--- a/module-08/index.html
+++ b/module-08/index.html
@@ -15,14 +15,18 @@
 <body>
     <header class="main-header">
         <div class="main-header-wrapper container">
-            <nav class="main-navigation">
+            <nav>
                 <div class="main-navigation-wrapper">
                     <a href="#" class="site-logo">
-                        <img class="img-logo " src="./img/logo-img.png" alt="brand and company name">
+                        <img src="./img/logo-img.png" alt="brand and company name">
                     </a>
                     <ul class="navigation-items">
-                        <li class="navigation-item"><a href="#" class="item-link">Log in</a></li>
-                        <li class="navigation-item"><a href="#" class="item-link">Sign up</a></li>
+                        <li class="navigation-item">
+                            <a href="#" class="item-link">Log in</a>
+                        </li>
+                        <li class="navigation-item">
+                            <a href="#" class="item-link">Sign up</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="main-header-content">
@@ -36,10 +40,10 @@
     </header>
 
     <main class="main-content">
-        <div class="main-content-wrapper container">
+        <div class="container">
             <h1 class="main-content-title visually-hidden">Title</h1>
-            <section class="main-section">
-                <div class="main-section-wrapper">
+            <section>
+                <div>
                     <h2 class="section-title">Meet a partner for your best holiday</h2>
                     <ul class="section-items">
                         <li class="section-item section-item-tv">
