Homework is ready for validation

--- a/module-10/index.html
+++ b/module-10/index.html
@@ -118,7 +118,7 @@
                         exercitation
                         ullamco laboris nisi ut aliquip ex ea commodo consequat.
                     </p>
-                    <ul class="section__list list">
+                    <ul class="section__team-list list">
                         <li class="section__item item">
                             <div class="team__wrapper">
                                 <div class="team__cart">
@@ -253,13 +253,13 @@
 
     <footer class="footer">
         <div class="footer__wrapper wrapper container">
-            <div class="footer__content">
+            <div class="footer__content footer-content">
                 <span class="footer__copyright text-dark">&copy;</span>
                 <p class="footer__text typographic-mr text-dark">2016 MoGo free PSD template by</p>
                 <a class="footer__link typographic-mr text-dark link" href="#">Laaqiq</a>
             </div>
             <div class="footer__field">
-                <input class="footer__input typographic-ri" type="email" name="email" placeholder="Your Email..."
+                <input class="footer__input input typographic-ri" type="email" name="email" placeholder="Your Email..."
                     autocomplete="email" autofocus>
                 <button class="footer__button typographic-mb btn--light button" type="button">Subscribe</button>
             </div>
