--- a/module-10/index.html
+++ b/module-10/index.html
@@ -124,7 +124,7 @@
                                 <div class="team__cart">
                                     <img class="team__img" src="img/member1.png" alt="Matthew Dix Graphic Design"
                                         srcset="img/member1.png 380w, img/member1@2x.png 760w"
-                                        sizes="(max-width: 1920px) 380px, 760px">
+                                        sizes="(min-width: 1920px) 760px, 380px">
                                     <ul class="team__list list">
                                         <li class="team__item item">
                                             <a class="team__link link" href="#">
@@ -167,7 +167,7 @@
                                     <img class="team__img" src="img/member2.png"
                                         alt="Christopher Campbell Branding/UX design"
                                         srcset="img/member2.png 380w, img/member2@2x.png 760w"
-                                        sizes="(max-width: 1920px) 380px, 760px">
+                                        sizes="(min-width: 1920px) 760px, 380px">
                                     <ul class="team__list list">
                                         <li class="team__item item">
                                             <a class="team__link link" href="#">
@@ -209,7 +209,7 @@
                                 <div class="team__cart">
                                     <img class="team__img" src="img/member3.png" alt="Michael Fertig Developer"
                                         srcset="img/member3.png 380w, img/member3@2x.png 760w"
-                                        sizes="(max-width: 1920px) 380px, 760px">
+                                        sizes="(min-width: 1920px) 760px, 380px">
                                     <ul class="team__list list">
                                         <li class="team__item item">
                                             <a class="team__link link" href="#">
