--- a/project-01/src/index.html
+++ b/project-01/src/index.html
@@ -6,12 +6,378 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>project-01 title</title>
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
 
 </head>
 
 <body>
-  <p class="text">Hello project</p>
+
+  <header class="header">
+    <div class="header__wrapper wrapper container">
+      <nav class="navigation header-navigation ">
+        <a href="#" class="site-logo navigation-logo">
+          <img class="site-logo__img" src="#" alt="brand and company name">
+        </a>
+        <ul class="meny navigation--list">
+          <li class="menu__item">
+            <a class="menu__link" href="#">Text</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="#">Text</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="#">Text</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="#">Text</a>
+          </li>
+          <li class="menu__item">
+            <button class="menu__button" href="#">Text</button>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+
+  <main class="main">
+    <div class="wrapper main--wrapper">
+      <h1 class="main-title">Text</h1>
+
+      <section class="section-training main__section-training">
+        <div class="section-training__wrapper">
+          <div class="section-training__content">
+            <h2 class="title section-training__title">Text</h2>
+            <span class="section-training__text">Text</span>
+            <p class="section-training__text-number">Text+25</p>
+            <button class="button section-training__button">text</button>
+          </div>
+          <div class="section-training__img">
+            <img class="img" src="#" alt="" srcset="">
+          </div>
+        </div>
+
+        <div class="section-training__icons">
+          <ul class="menu-icons">
+            <li class="item menu-icons__item">
+              <a href="#" class="link menu-icons__link">
+                <svg class="icon menu-icons__icon" width="20px" height="20px">
+                  <!-- <use href="./images/sprite/symbol-defs.svg#icon-basket"></use> -->
+                </svg>
+              </a>
+              <p class="menu-icons__description">Text</p>
+            </li>
+            <li class="item menu-icons__item">
+              <a href="#" class="link menu-icons__link">
+                <svg class="icon menu-icons__icon" width="20px" height="20px">
+                  <!-- <use href="./images/sprite/symbol-defs.svg#icon-basket"></use> -->
+                </svg>
+              </a>
+              <p class="menu-icons__description">Text</p>
+            </li>
+            <li class="item menu-icons__item">
+              <a href="#" class="link menu-icons__link">
+                <svg class="icon menu-icons__icon" width="20px" height="20px">
+                  <!-- <use href="./images/sprite/symbol-defs.svg#icon-basket"></use> -->
+                </svg>
+              </a>
+              <p class="menu-icons__description">Text</p>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="section-help">
+        <div class="section-help__wrapper">
+          <h2 class="section-help__title">Text</h2>
+          <ul class="items section-help__items">
+            <li class="section-help__item">
+              <p class="section-help__text">Text</p>
+              <!-- <a href="" class="section-help__link">1</a> -->
+            </li>
+            <li class="section-help__item">
+              <p class="section-help__text">Text</p>
+              <!-- <a href="" class="section-help__link">2</a> -->
+            </li>
+            <li class="section-help__item">
+              <p class="section-help__text">Text</p>
+              <!-- <a href="" class="section-help__link">3</a> -->
+            </li>
+            <li class="section-help__item">
+              <p class="section-help__text">Text</p>
+              <!-- <a href="" class="section-help__link">4</a> -->
+            </li>
+            <li class="section-help__item">
+              <p class="section-help__text">Text</p>
+              <!-- <a href="" class="section-help__link">5</a> -->
+            </li>
+            <li class="section-help__item">
+              <p class="section-help__text">Text</p>
+              <!-- <a href="" class="section-help__link">6</a> -->
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="section-action">
+        <div class="section-action__wrapper">
+          <h2 class="section-action__title">Text</h2>
+          <ul class="items section-action__items">
+            <li class="items__item">
+              <h3 class="items__title">Text</h3>
+              <p class="items__text">Text</p>
+            </li>
+            <li class="items__item">
+              <h3 class="items__title">Text</h3>
+              <p class="items__text">Text</p>
+            </li>
+            <li class="items__item">
+              <h3 class="items__title">Text</h3>
+              <p class="items__text">Text</p>
+            </li>
+            <li class="items__item">
+              <h3 class="items__title">Text</h3>
+              <p class="items__text">Text</p>
+            </li>
+            <li class="items__item">
+              <h3 class="items__title">Text</h3>
+              <p class="items__text">Text</p>
+            </li>
+            <li class="items__item">
+              <h3 class="items__title">Text</h3>
+              <p class="items__text">Text</p>
+            </li>
+            <li class="items__item">
+              <h3 class="items__title">Text</h3>
+              <p class="items__text">Text</p>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="section-program">
+        <div class="section-program__wrapper">
+          <h2 class="section-program__title">Text</h2>
+          <ul class="items section-program__items">
+            <li class="items__item">
+              <h3 class="items__title">Text</h3>
+              <p class="items__text">Text</p>
+            </li>
+            <li class="items__item">
+              <h3 class="items__title">Text</h3>
+              <p class="items__text">Text</p>
+            </li>
+            <li class="items__item">
+              <h3 class="items__title">Text</h3>
+              <p class="items__text">Text</p>
+            </li>
+            <li class="items__item">
+              <h3 class="items__title">Text</h3>
+              <p class="items__text">Text</p>
+            </li>
+            <li class="items__item">
+              <h3 class="items__title">Text</h3>
+              <p class="items__text">Text</p>
+            </li>
+            <li class="items__item">
+              <h3 class="items__title">Text</h3>
+              <p class="items__text">Text</p>
+            </li>
+            <li class="items__item">
+              <h3 class="items__title">Text</h3>
+              <p class="items__text">Text</p>
+            </li>
+          </ul>
+          <div class="section-program__img">
+            <img class="img" src="#" alt="" srcset="">
+          </div>
+        </div>
+      </section>
+
+      <section class="section-choice">
+        <div class="section-choice__wrapper">
+          <h2 class="section-choice__title">Text</h2>
+          <ul class="section-choice__items">
+            <li class="section-choice__item">
+              <p class="section-choice__text">Text</p>
+              <!-- <a href="" class="section-help__link">1</a> -->
+            </li>
+            <li class="section-choice__item">
+              <p class="section-choice__text">Text</p>
+            </li>
+            <li class="section-choice__item">
+              <p class="section-choice__text">Text</p>
+            </li>
+            <li class="section-choice__item">
+              <p class="section-choice__text">Text</p>
+            </li>
+            <li class="section-choice__item">
+              <p class="section-choice__text">Text</p>
+            </li>
+            <li class="section-choice__item">
+              <p class="section-choice__text">Text</p>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="section-teacher">
+        <div class="section-teacher__wrapper">
+          <h2 class="section-teacher__title">Text</h2>
+          <div class="card section-teacher__card">
+            <div class="card__img">
+              <img src="" alt="" class="img">
+            </div>
+            <div class="card__content">
+              <h3 class="card__title">Text</h3>
+              <ul class="card__items">
+                <li class="card__item">
+                  <p class="card__description">Text</p>
+                </li>
+                <li class="card__item">
+                  <p class="card__description">Text</p>
+                </li>
+                <li class="card__item">
+                  <p class="card__description">Text</p>
+                </li>
+              </ul>
+              <p class="card__text">Text</p>
+              <a href="#" class="card_link">Text</a>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="section-warranty">
+        <div class="section-warranty__wrapper">
+          <h2 class="section-warranty__title"></h2>
+          <ul class="section-warranty_items">
+            <li class="section-warranty__item">
+              <p class="section-warranty__text">Text</p>
+            </li>
+            <li class="section-warranty__item">
+              <p class="section-warranty__text">Text</p>
+              <span class="section-warranty">Text</span>
+            </li>
+            <li class="section-warranty__item">
+              <p class="section-warranty__text">Text</p>
+            </li>
+            <li class="section-warranty__item">
+              <p class="section-warranty__text">Text</p>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="section-slider">
+        <div class="section-slider__wrapper">
+          <h2 class="section-slider__title">Text</h2>
+          <button class="section-slider__button left-arrow">Teeeeeeext</button>
+          <button class="section-slider__button right-arrow">Teeeeeeext</button>
+          <ul class="slider section-slider__items">
+            <li class="slider__item">
+              <div class="graduate-card section-slider__graduate-card">
+                <h3 class="graduate-card__title">Text</h3>
+                <p class="graduate-card__description">Text</p>
+                <p class="graduate-card__text">Text</p>
+                <a class="graduate-card_link" href="#">Text</a>
+              </div>
+            </li>
+            <li class="slider__item">
+              <a href="" class="section-slider__link">
+                <img class="img" src="" alt="">
+              </a>
+            </li>
+            <li class="slider__item">
+              <a href="" class="section-slider__link">
+                <img class="img" src="" alt="">
+              </a>
+            </li>
+            <li class="slider__item">
+              <a href="" class="section-slider__link">
+                <img class="img" src="" alt="">
+              </a>
+            </li>
+            <li class="slider__item">
+              <a href="" class="section-slider__link">
+                <img class="img" src="" alt="">
+              </a>
+            </li>
+            <li class="slider__item">
+              <a href="" class="section-slider__link">
+                <img class="img" src="" alt="">
+              </a>
+            </li>
+            <li class="slider__item">
+              <a href="" class="section-slider__link">
+                <img class="img" src="" alt="">
+              </a>
+            </li>
+            <li class="slider__item">
+              <a href="" class="section-slider__link">
+                <img class="img" src="" alt="">
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+
+
+
+
+      <section class="section-form">
+        <div class="section-form__wrapper">
+          <h2 class="section-form__title">Text</h2>
+          <p class="section-form__description">Text</p>
+          <input class="section-form__input" type="text" name="name" placeholder="Имя*" minlength="4" maxlength="40"
+            autocomplete="name" autofocus required>
+          <input class="section-form__input" type="tel" name="tel" placeholder="Телефон*" minlength="4" maxlength="40"
+            autocomplete="tel" required>
+          <button class="section-form__button">Text</button>
+        </div>
+      </section>
+
+    </div>
+  </main>
+
+
+
+
+  <footer class="footer">
+    <div class="footer__wrapper">
+      <div class="footer__content">
+        <ul class="menu footer__menu">
+          <li class="item menu__item">
+            <a href="#" class="site-logo footer__logo">
+              <img class="site-logo__img" src="#" alt="brand and company name">
+            </a>
+          </li>
+          <li class="item menu__item">
+            <a href="#" class="link section-icons__link">
+              <svg class="icon section-icons__icon" width="20px" height="20px">
+                <!-- <use href="./images/sprite/symbol-defs.svg#icon-basket"></use> -->
+              </svg>
+            </a>
+          </li>
+          <li class="item menu__item">
+            <a href="#" class="link section-icons__link">
+              <svg class="icon section-icons__icon" width="20px" height="20px">
+                <!-- <use href="./images/sprite/symbol-defs.svg#icon-basket"></use> -->
+              </svg>
+            </a>
+          </li>
+        </ul>
+
+      </div>
+      <div class="copyright footer__copyright">
+        <span class="copyright__symbol text-dark">&copy;</span>
+        <p class="copyright__text typographic-mr text-dark">MoGo free PSD template by 2016</p>
+      </div>
+    </div>
+  </footer>
+
   <!-- Сюда будет всталена ссылка на файл скриптов -->
   <!-- inject:js -->
   <!-- endinject -->
